feat: add and disable draggable Camperbot

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   --server-stack-height: 285px;
   --server-stack-width: 150px;
   --monitor-height: 100px;
-  --server-border-width: 10px;
+  --server-border-width: 7px;
   --dark-1: #0a0a23;
   --dark-2: #1b1b32;
   --dark-3: #2a2a40;
@@ -56,210 +56,18 @@ main {
   justify-content: center;
 }
 
-.light-bulb {
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: fit-content;
-}
-.wire {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  width: 7px;
-  height: 80px;
-  background-color: black;
-}
-.shade {
-  width: 60px;
-  height: 50px;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
-  background-color: black;
-  z-index: 1;
-}
-.bulb {
-  background-color: yellow;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  margin: -20px auto;
-}
-.light {
-  top: 620px;
-  width: 2120px;
-  aspect-ratio: 1 / 1;
-  position: fixed;
-  background: rgb(238, 255, 0);
-  background: linear-gradient(
-    to right bottom,
-    rgba(251, 255, 0, 0.301),
-    6%,
-    rgba(78, 83, 34, 0),
-    30%,
-    transparent
-  );
-  transform: rotate(45deg);
-}
-
 section.room {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 .station {
   display: flex;
   flex-direction: column;
-  justify-content: end;
-}
-
-.monitor {
-  width: 100%;
-  height: var(--monitor-height);
-  margin-bottom: var(--server-border-width);
-  z-index: 1;
-}
-.screen {
-  width: calc(100% - 8px);
-  height: 80%;
-  background-color: #111;
-  border: black solid 4px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.screen:hover {
-  cursor: pointer;
-}
-.actual-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template: 1fr 16fr / 40% 60%;
-  grid-template-areas:
-    "header header"
-    "description editor";
-  word-wrap: wrap;
-  /* font-size: 1.5px; */
-  z-index: 100;
-  background-color: #111;
-  color: var(--light-2);
-}
-.actual-screen > header {
-  grid-area: header;
-  width: 100%;
-  height: 3em;
-  background-color: var(--dark-2);
-}
-.actual-screen #logo {
-  width: 50%;
-  height: 85%;
-  /* font-size: 0.4em; */
-  max-height: 100%;
-  background-color: var(--dark-1);
-  display: block;
-  margin: 0 auto;
-  padding: 0.4em;
-}
-.description {
-  grid-area: description;
-  border-right: #111 solid 1px;
-}
-.content {
-  min-height: 100px;
-}
-.submit {
-  margin: 0 auto;
-}
-.submit > button {
-  width: 80%;
-  display: block;
-  margin: 0 auto;
-  height: 100%;
-  background-image: linear-gradient(var(--light-yellow), var(--dark-yellow));
-  border-width: 0.2em;
-  border-color: var(--dark-yellow);
-  font-size: 1.2em;
-  font-weight: bold;
-  color: var(--dark-1);
-  cursor: pointer;
-  margin-top: 0.8em;
-}
-.submit > button:hover {
-  background-image: none;
-  background-color: var(--light-yellow);
-}
-.editor {
-  grid-area: editor;
-}
-.monaco-editor {
-  width: 100%;
-  height: 100%;
-}
-
-.flash {
-  animation: flash 2s ease-in-out 1s infinite;
-}
-@keyframes flash {
-  0% {
-    background-color: black;
-  }
-  50% {
-    background-color: #555;
-  }
-  100% {
-    background-color: black;
-  }
-}
-.arm {
-  width: 10%;
-  height: 18%;
-  background-color: #111;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin: 0 auto;
-}
-.stand {
-  width: 100%;
-  height: 2%;
-  background-color: #111;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin: 0 auto;
-}
-
-/* .server-stack {
-} */
-.server {
-  width: var(--server-stack-width);
-  aspect-ratio: 5 / 1;
-  background-color: black;
-  border: #444 solid var(--server-border-width);
-  display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap-reverse;
-  gap: 10px;
-}
-
-.status-led {
-  width: 10px;
-  height: 5px;
-  flex-basis: 10px;
-  margin: auto 0;
-}
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+  justify-content: flex-end;
 }
 
 #ground {
