--- a/client/src/components/camperbot.css
+++ b/client/src/components/camperbot.css
@@ -3,17 +3,12 @@
   top: 0;
   right: 0;
   z-index: 99999;
-  width: 250px;
+  width: fit-content;
   height: 300px;
-  /* background: #fff; */
-  /* border: 1px solid red; */
-  /* border-radius: 0 0 5px 5px;
-  box-shadow: 0 0 5px #ccc; */
   padding: 10px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #333;
-  /* overflow: hidden; */
 }
 
 .camperbot-body {
@@ -129,17 +124,16 @@
   transform: rotate(250deg);
 }
 .speech-smoke > .speech-bubble {
-  height: fit-content;
-  width: fit-content;
-  min-width: 90px;
+  width: 230px;
   min-height: 60px;
   background-color: grey;
   border-radius: 10%;
   padding: 0.4rem;
   color: var(--light-2);
   transform: rotate(-250deg);
-  margin-top: -155px;
-  margin-left: -30px;
+  transform-origin: right top;
+  margin-top: -50px;
+  margin-left: -220px;
 }
 
 .camperbot-neck {
