--- a/client/src/components/monitor.css
+++ b/client/src/components/monitor.css
@@ -21,13 +21,11 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  display: grid;
-  grid-template: 1fr 16fr / 40% 60%;
-  grid-template-areas:
-    "header header"
-    "description editor";
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
   word-wrap: wrap;
-  /* font-size: 1.5px; */
   z-index: 100;
   background-color: #111;
   color: var(--light-2);
@@ -41,7 +39,6 @@
 .actual-screen #logo {
   width: 50%;
   height: 85%;
-  /* font-size: 0.4em; */
   max-height: 100%;
   background-color: var(--dark-1);
   display: block;
@@ -49,17 +46,47 @@
   padding: 0.4em;
 }
 .description {
-  grid-area: description;
-  border-right: #111 solid 1px;
+  padding-top: 1rem;
+  text-align: center;
 }
 .content {
   min-height: 100px;
 }
+
+ul.options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+li.options-item {
+  width: 100%;
+  background-color: var(--dark-2);
+  list-style: none;
+  padding: 0.5rem;
+  margin: 0.3rem;
+}
+li.options-item.selected {
+  border: var(--light-yellow) solid 2px;
+}
+li > label {
+  display: block;
+  width: 100%;
+  font-weight: 700;
+  color: var(--light-2);
+}
+li > label > input {
+  margin-right: 1rem;
+}
+
 .submit {
   margin: 0 auto;
+  width: 100%;
 }
 .submit > button {
   width: 80%;
+  max-width: 300px;
   display: block;
   margin: 0 auto;
   height: 100%;
@@ -75,13 +102,6 @@
 .submit > button:hover {
   background-image: none;
   background-color: var(--light-yellow);
-}
-.editor {
-  grid-area: editor;
-}
-.monaco-editor {
-  width: 100%;
-  height: 100%;
 }
 
 .flash {
