--- a/client/src/components/camperbot.css
+++ b/client/src/components/camperbot.css
@@ -39,6 +39,9 @@
   flex-direction: column;
   align-items: center;
 }
+.camperbot-hat:hover {
+  cursor: pointer;
+}
 .camperbot-hat > .ball {
   border-radius: 50%;
   width: 5px;
@@ -134,6 +137,47 @@
   transform-origin: right top;
   margin-top: -50px;
   margin-left: -220px;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+}
+.speech-bubble > .speech-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.speech-buttons > button {
+  background-color: var(--dark-yellow);
+  border: 1px solid var(--light-yellow);
+  border-radius: 5px;
+  padding: 0.1rem;
+  width: 55px;
+  color: var(--light-1);
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.speech-buttons > button:hover {
+  background-color: var(--light-yellow);
+  border: 1px solid var(--dark-yellow);
+  color: var(--dark-1);
+}
+
+.speech-bubble > p {
+  letter-spacing: 0.15em; /* Adjust as needed */
+  animation: blink-caret 0.75s step-end infinite;
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
 }
 
 .camperbot-neck {
