--- a/client/src/components/monitor.css
+++ b/client/src/components/monitor.css
@@ -1,6 +1,6 @@
 .monitor {
   width: 100%;
-  height: var(--monitor-height);
+  aspect-ratio: 2 / 1;
   margin-bottom: var(--server-border-width);
   z-index: 1;
 }
