feat(client): clickable leds

--- a/client/src/components/server.css
+++ b/client/src/components/server.css
@@ -31,6 +31,10 @@
   flex-basis: 10px;
   margin: auto 0;
 }
+.status-led:hover {
+  cursor: pointer;
+}
+
 @keyframes blink {
   0% {
     opacity: 0;
